<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NASA App</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Find on Wikipedia</string>
    <string name="wiki_helper_text">Search for the term on Wikipedia</string>

    <string name="today_text">Today</string>
    <string name="yesterday_text">Yesterday</string>
    <string name="day_before_yesterday_text">Day before YD</string>
    <string name="set_theme_header_view">Set theme</string>
    <string name="switch_button_light_theme_text">Day theme</string>
    <string name="switch_button_dark_theme_text">Night theme</string>
    <string name="menu_bottom_earth">Earth</string>
    <string name="menu_bottom_mars">Mars</string>
    <string name="menu_bottom_sun">Sun</string>
    <string name="menu_bottom_settings">Settings</string>
    <string name="cameras">Cameras</string>

    <string name="fhaz">Front Hazard Avoidance Camera</string>
    <string name="rhaz">Rear Hazard Avoidance Camera</string>
    <string name="mast">Mast Camera</string>
    <string name="chemcam">Chemistry and Camera Complex</string>
    <string name="mahli">Mars Hand Lens Imager</string>
    <string name="mardi">Mars Descent Imager</string>
    <string name="navcam">Navigation Camera</string>
    <string name="fhaz_menu">FHAZ</string>
    <string name="rhaz_menu">RHAZ</string>
    <string name="mast_menu">MAST</string>
    <string name="chemcam_menu">CHEMCAM</string>
    <string name="mahli_menu">MAHLI</string>
    <string name="mardi_menu">MARDI</string>
    <string name="navcam_menu">NAVCAM</string>
    <string name="coronal_mass_ejection">Coronal Mass Ejection</string>
    <string name="noted_toolbar_text">Notes</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_text">Enter text</string>
    <string name="add_note">Add note</string>
    <string name="ok">OK</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="no_data">The data has not yet arrived</string>
    <string name="choose_different_camera">Try to choose a different camera or see photos from other days</string>

    <string name="view_pager_today_text">Today</string>
    <string name="view_pager_yesterday_text">Yesterday</string>
    <string name="view_pager_day_before_yd_text">Day B4 YD</string>
</resources>