<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/appBarSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_bottom_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/appBarSun"
        android:icon="@drawable/ic_sun"
        android:title="@string/menu_bottom_sun"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/nullItem"
        android:checkable="false"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/appBarEarth"
        android:icon="@drawable/ic_earth"
        android:title="@string/menu_bottom_earth"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/appBarMars"
        android:icon="@drawable/ic_mars"
        android:title="@string/menu_bottom_mars"
        app:showAsAction="always" />
</menu>
