<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dialog_layout_width"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleDialog"
        style="@style/bottomSheetDescriptionHeaderStyle.dateEarthText.dialogTitleStyle"
        android:text="@string/add_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputHeaderNoteLayout"
        style="@style/wikipediaTextInputLayoutStyle.dialogHeaderInputLayoutStyle"
        android:hint="@string/enter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleDialog">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputHeaderNoteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputBodyNoteLayout"
        style="@style/wikipediaTextInputLayoutStyle.dialogHeaderInputLayoutStyle.dialogBodyInputLayoutStyle"
        android:hint="@string/enter_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHeaderNoteLayout"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBodyNoteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/okButton"
        style="@style/dialogOkButtonStyle"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputBodyNoteLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputBodyNoteLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancelButton"
        style="@style/dialogOkButtonStyle.dialogCancelButtonStyle"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/okButton"
        app:layout_constraintTop_toBottomOf="@+id/inputBodyNoteLayout"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>