<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            style="@style/mainConstraintLayoutStyle">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="@dimen/wikipedia_text_input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wikipedia_text_input_margin_top"
                android:hint="@string/search_wiki"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.03">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipMainGroup"
                style="@style/chipGroupStyle"
                app:layout_constraintStart_toStartOf="@+id/inputLayout"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/todayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/today_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/yesterdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yesterday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dayBeforeYesterdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/day_before_yesterday_text" />
            </com.google.android.material.chip.ChipGroup>

            <com.ketee_jishs.nasa_app.util.EquilateralImageView
                android:id="@+id/imageView"
                style="@style/equilateralImageViewStyle"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipMainGroup"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_no_photo_vector" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noDataTextView"
                style="@style/bottomSheetDescriptionTextStyle.earthCaptionTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

