<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            style="@style/mainConstraintLayoutStyle"
            app:layoutDescription="@xml/motion_scene">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wikipediaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wikipedia_button_margin_top"
                android:layout_marginBottom="@dimen/wikipedia_button_margin_bottom"
                app:layout_constraintBottom_toBottomOf="@+id/inputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputLayout"
                app:srcCompat="@drawable/ic_wikipedia" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                android:layout_width="@dimen/wikipedia_text_input_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/wikipedia_text_input_margin_start"
                android:layout_marginTop="@dimen/wikipedia_text_input_margin_top"
                android:hint="@string/search_wiki"
                app:helperText="@string/wiki_helper_text"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.03">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipMainGroup"
                style="@style/chipGroupStyle"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/wikipediaButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputLayout"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/todayChip"
                    android:layout_width="@dimen/chip_layout_width"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/today_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/yesterdayChip"
                    android:layout_width="@dimen/chip_layout_width"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yesterday_text" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dayBeforeYesterdayChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/day_before_yesterday_text" />
            </com.google.android.material.chip.ChipGroup>

            <WebView
                android:id="@+id/webView"
                style="@style/equilateralImageViewStyle"
                android:layout_height="@dimen/web_view_height"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipMainGroup"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/chipMainGroup" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>